add hologram api. add /dvs loc json. add /vs map explore. update map.json to support settings for increased mob/ore drops, animal spawns, and starting kits. add right click with a shovel to turn gravel into flint. add a glowing slime and hologram at the player chest location